--- a/src/ServiceHost/Pages/Shared/Partials/Display_Toast_Message/_DisplayPageMessages.cshtml
+++ b/src/ServiceHost/Pages/Shared/Partials/Display_Toast_Message/_DisplayPageMessages.cshtml
@@ -1,4 +1,4 @@
-﻿@using global::Framework.Asp.Infrastructure.Messages
+﻿@using global::Base.AspCoreUtility.Infrastructure.Messages
 @{
     // نکته مهم
     // در همه شرایط کار نمی‌کند List استفاده از کلاس
