--- a/src/ServiceHost/Pages/Shared/Partials/Display_Toast_Message/_DisplayPageMessagesInLayout.cshtml
+++ b/src/ServiceHost/Pages/Shared/Partials/Display_Toast_Message/_DisplayPageMessagesInLayout.cshtml
@@ -1,4 +1,4 @@
-﻿@using global::Framework.Asp.Infrastructure.Messages
+﻿@using global::Base.AspCoreUtility.Infrastructure.Messages
 @{
     var pageErrors =
         TempData[MessageType.PageError.ToString()] as
