--- a/src/ServiceHost/Pages/Shared/Partials/Display_Toast_Message/_DisplayToastMessages.cshtml
+++ b/src/ServiceHost/Pages/Shared/Partials/Display_Toast_Message/_DisplayToastMessages.cshtml
@@ -1,5 +1,5 @@
-﻿@using global::Framework.Asp.Infrastructure.Messages
-@using global::Framework.Asp.Infrastructure.Settings
+﻿@using global::Base.AspCoreUtility.Infrastructure.Messages
+@using global::Base.AspCoreUtility.Infrastructure.Settings
 
 @inject ApplicationSettings applicationSettings
 
