--- a/src/BlazorAdmin/Shared/NavMenu.razor
+++ b/src/BlazorAdmin/Shared/NavMenu.razor
@@ -8,9 +8,8 @@
         <MudNavLink Href="/personal/account" Icon="@Icons.Material.Outlined.Person">اکانت</MudNavLink>
     </MudNavGroup>
     <MudDivider DividerType="DividerType.FullWidth"/>
-    <MudNavGroup Title="شخصی" Typo="Typo.subtitle2" Class="mt-2 mb-2" Icon="@Icons.Material.Filled.PersonalInjury">
-        <MudNavLink Href="/personal/dashboard" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Dashboard">داشبورد</MudNavLink>
-        <MudNavLink Href="/personal/account" Icon="@Icons.Material.Outlined.Person">اکانت</MudNavLink>
+    <MudNavGroup Title="محصولات" Typo="Typo.subtitle2" Class="mt-2 mb-2" Icon="@Icons.Material.Filled.AddShoppingCart">
+        <MudNavLink Href="/shop/category" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Category">دسته محصولات</MudNavLink>
     </MudNavGroup>
     <MudDivider DividerType="DividerType.FullWidth"/>
     <MudNavGroup Title="شخصی" Typo="Typo.subtitle2" Class="mt-2 mb-2" Icon="@Icons.Material.Filled.PersonalInjury">
