--- a/src/BlazorAdmin/Pages/Shop/ProductCategory/Index.razor
+++ b/src/BlazorAdmin/Pages/Shop/ProductCategory/Index.razor
@@ -1,97 +1,89 @@
 ﻿@page "/shop/category/"
-<div class="row">
-    <div class="col-sm-12">
-        <h4 class="page-title pull-right">Category</h4>
-        <p class="pull-left">
-            <a class="btn btn-success btn-lg" >ایجاد گروه محصول جدید</a>
-        </p>
-    </div>
-</div>
+@using BlazorAdmin.Components.Shop.ProductCategory
+@using BlazorAdmin.Components.Shop.Shared
+@using BlazorAdmin.Model
+<div style="display: flex">
+    <MudBreadcrumbs Class="pt-0 mb-10" Items="_items"></MudBreadcrumbs>
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">جستجو در گروه محصولات</h3>
-            </div>
-            <div class="panel-body">
-                <form class="form-inline" role="form" method="get">
-                    <div class="form-group">
-                        <label class="sr-only" asp-for="SearchModel.Name"></label>
-                        <input class="form-control" asp-for="SearchModel.Name" placeholder="نام گروه محصولی">
-                    </div>
-                    <button type="submit" class="btn btn-success waves-effect waves-light m-l-10">جستجو</button>
-                    <a class="btn btn-primary waves-effect waves-light m-l-10" asp-page="./Index">مشاهده همه</a>
-                </form>
-            </div>
-        </div>
-    </div>
 </div>
+<MudGrid Style="">
+    <MudHidden Breakpoint="Breakpoint.SmAndDown" Invert="true">
+        <MudItem sm="12" md="6" lg="5" Style="width: 100%">
+            <AddCategoryPanel></AddCategoryPanel>
+        </MudItem>
+        <MudItem sm="12" md="6" lg="7" Style="width: 100%">
+            <SearchPanel/>
+        </MudItem>
 
-<div class="row" id="ProductCategoriesDiv">
-    <div class="col-md-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">لیست گروه محصولات</h3>
-            </div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <table id="datatable" class="table table-striped table-bordered">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>عکس</th>
-                                    <th>نام</th>
-                                    <th>تاریخ تولید</th>
-                                    <th>عملیات</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                               
-                                    @* <tr> *@
-                                    @*     <td>@item.Id</td> *@
-                                    @*     <td> *@
-                                    @*         <img src="~/ProductPictures/@item.Picture" style="width: 70px; height: 70px" /> *@
-                                    @*     </td> *@
-                                    @*     <td>@item.Name</td> *@
-                                    @*     <td>@item.CreationDate</td> *@
-                                    @*     <td> *@
-                                    @*         <a class="btn btn-warning pull-right m-rl-5" *@
-                                    @*            href="#showmodal=@Url.Page("./Index", "Edit", new { id = item.Id})"> *@
-                                    @*             <i class="fa fa-edit"></i> ویرایش *@
-                                    @*         </a> *@
-                                    @*     </td> *@
-                                    @* </tr> *@
-                                
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-@code
-{
-    [Inject]
-    private IJSRuntime JsRuntime { get; set; }
+        <MudItem sm="12" md="12" lg="12" Style="width: 100%">
+            <DataTable/>
+        </MudItem>
+    </MudHidden>
+    <MudHidden Breakpoint="Breakpoint.SmAndUp" Invert="true">
+        
+        <MudItem sm="12" md="6" lg="7" Style="width: 100%">
+            <SearchPanel />
+        </MudItem>
+        <MudItem sm="12" md="6" lg="5" Style="width: 100%">
+            <AddCategoryPanel></AddCategoryPanel>
+        </MudItem>
+        <MudItem sm="12" md="12" lg="12" Style="width: 100%">
+            <DataTable />
+        </MudItem>
+    </MudHidden>
+</MudGrid>
 
-    protected override async Task OnInitializedAsync()
+
+
+
+
+
+
+
+@code {
+    private List<string> col { get; set; }
+    private List<text> El { get; set; }
+    private List<BreadcrumbItem> _items = new List<BreadcrumbItem>
     {
-    }
+        new BreadcrumbItem("صفحه اصلی", href: "/"),
+        new BreadcrumbItem("محصولات",href:null,disabled:true),
+        new BreadcrumbItem("دسته محصولات", href: "/shop/category/")
+    };
 
-    protected override async Task OnAfterRenderAsync(bool firstRender)
+    protected override void OnInitialized()
     {
-        if (firstRender)
+        col = new() { "Id","Name","Image" ,"Creation Date"};
+        El = new()
         {
-            await JsRuntime.InvokeVoidAsync("AddDataTable");
-
-        }
+            new text()
+            {
+                CreationDate = "12:50",
+                Id = 1,
+                ImageSrc = "Image/Test1",
+                Name = "ali"
+            },
+            new text()
+            {
+                CreationDate = "12:51",
+                Id = 2,
+                ImageSrc = "Image/Test2",
+                Name = "sadegh"
+            },
+            new text()
+            {
+                CreationDate = "12:52",
+                Id = 3,
+                ImageSrc = "Image/Test3",
+                Name = "reza"
+            },
+            new text()
+            {
+                CreationDate = "12:52",
+                Id = 3,
+                ImageSrc = "Image/Test3",
+                Name = "reza"
+            }
+        };
     }
 
-    public async Task Dispose()
-    {
-        await JsRuntime.InvokeAsync<IJSObjectReference>("RemoveDataTable");
-    }
 }
