--- a/src/BlazorAdmin/Shared/NavMenu.razor
+++ b/src/BlazorAdmin/Shared/NavMenu.razor
@@ -1,15 +1,15 @@
-﻿<PersonCard Style="background-color: var(--mud-palette-drawer-background);color: var(--mud-palette-drawer-text); direction: rtl" Class="mt-3"/>
+﻿<PersonCard Style="background-color: var(--mud-palette-drawer-background);color: var(--mud-palette-drawer-test); direction: rtl" Class="mt-3"/>
 
 <MudNavMenu Color="Color.Primary" Margin="Margin.Dense" Style="direction: rtl; text-align: start" >
     <MudDivider DividerType="DividerType.FullWidth" />
 
     <MudNavGroup Title="شخصی"  Class="mt-2 mb-2" Icon="@Icons.Material.Filled.PersonalInjury">
-        <MudNavLink  Href="/"  Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Dashboard">داشبورد</MudNavLink>
-        <MudNavLink Href="/personal/account" Icon="@Icons.Material.Outlined.Person">اکانت</MudNavLink>
+        <MudNavLink  Href="/admin/personal/dashborad"  Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Dashboard">داشبورد</MudNavLink>
+        <MudNavLink Href="/admin/personal/account" Icon="@Icons.Material.Outlined.Person">اکانت</MudNavLink>
     </MudNavGroup>
     <MudDivider DividerType="DividerType.FullWidth"/>
     <MudNavGroup Title="محصولات" Typo="Typo.subtitle2" Class="mt-2 mb-2" Icon="@Icons.Material.Filled.AddShoppingCart">
-        <MudNavLink Href="/shop/category" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Category">دسته محصولات</MudNavLink>
+        <MudNavLink Href="/admin/shop/category" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Category">دسته محصولات</MudNavLink>
     </MudNavGroup>
     <MudDivider DividerType="DividerType.FullWidth"/>
     <MudNavGroup Title="شخصی" Typo="Typo.subtitle2" Class="mt-2 mb-2" Icon="@Icons.Material.Filled.PersonalInjury">
