--- a/src/BlazorAdmin/Pages/Personal/Dashboard.razor
+++ b/src/BlazorAdmin/Pages/Personal/Dashboard.razor
@@ -1,4 +1,4 @@
-﻿@page "/Personal/Dashboard"
+﻿@page "/admin/Personal/Dashboard"
 
 <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">Dashboard</MudText>
 <MudGrid>
