--- a/src/BlazorAdmin/Shared/MainLayout.razor
+++ b/src/BlazorAdmin/Shared/MainLayout.razor
@@ -35,8 +35,8 @@
                 <ChildContent>
                     <PersonCard Class="mt-n2" />
                     <MudDivider Class="mb-2" />
-                    <MudListItem Text="Account" Icon="@Icons.Material.Outlined.Person" Href="/personal/account" />
-                    <MudListItem Text="Logout" Icon="@Icons.Material.Outlined.Login" Href="/pages/authentication/login" />
+                    <MudListItem Text="Account" Icon="@Icons.Material.Outlined.Person" Href="/admin/personal/account" />
+                    <MudListItem Text="Logout" Icon="@Icons.Material.Outlined.Login" Href="/admin/pages/authentication/login" />
                 </ChildContent>
             </MudMenu>
            
