--- a/src/ServiceHost/Pages/Shared/Partials/Display_Toast_Message/_DisplayPageMessages.cshtml
+++ b/src/ServiceHost/Pages/Shared/Partials/Display_Toast_Message/_DisplayPageMessages.cshtml
@@ -26,7 +26,7 @@
                 }
             </ul>
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span class="text-bold-700" aria-hidden="true">&times;</span>
+                <span class="test-bold-700" aria-hidden="true">&times;</span>
             </button>
         </div>
     }
