fiexd error . about refresh page in BlazorAdmin

--- a/src/BlazorAdmin/Pages/Shop/ProductCategory/Index.razor
+++ b/src/BlazorAdmin/Pages/Shop/ProductCategory/Index.razor
@@ -43,7 +43,7 @@
 
 @code {
     private List<string> col { get; set; }
-    private List<text> El { get; set; }
+    private List<test> El { get; set; }
     private List<BreadcrumbItem> _items = new List<BreadcrumbItem>
     {
         new BreadcrumbItem("صفحه اصلی", href: "/"),
@@ -62,28 +62,28 @@
         col = new() { "Id","Name","Image" ,"Creation Date"};
         El = new()
         {
-            new text()
+            new test()
             {
                 CreationDate = "12:50",
                 Id = 1,
                 ImageSrc = "Image/Test1",
                 Name = "ali"
             },
-            new text()
+            new test()
             {
                 CreationDate = "12:51",
                 Id = 2,
                 ImageSrc = "Image/Test2",
                 Name = "sadegh"
             },
-            new text()
+            new test()
             {
                 CreationDate = "12:52",
                 Id = 3,
                 ImageSrc = "Image/Test3",
                 Name = "reza"
             },
-            new text()
+            new test()
             {
                 CreationDate = "12:52",
                 Id = 3,
