--- a/src/BlazorAdmin/Pages/Personal/Dashboard.razor
+++ b/src/BlazorAdmin/Pages/Personal/Dashboard.razor
@@ -6,7 +6,7 @@
         <MudPaper Elevation="25" Class="d-flex flex-row pt-6 pb-4" Style="height:100px;">
             <MudIcon Icon="@Icons.Material.Filled.Euro" Color="Color.Primary" Class="mx-4" Style="width:54px; height:54px;"></MudIcon>
             <div>
-                <MudText Typo="Typo.subtitle1" Class="mud-text-secondary mb-n1">Total Cost</MudText>
+                <MudText Typo="Typo.subtitle1" Class="mud-test-secondary mb-n1">Total Cost</MudText>
                 <MudText Typo="Typo.h5">3,125,000</MudText>
             </div>
         </MudPaper>
@@ -15,7 +15,7 @@
         <MudPaper Elevation="25" Class="d-flex flex-row pt-6 pb-4" Style="height:100px;">
             <MudIcon Icon="@Icons.Material.Filled.Layers" Color="Color.Secondary" Class="mx-4" Style="width:54px; height:54px;"></MudIcon>
             <div>
-                <MudText Typo="Typo.subtitle1" Class="mud-text-secondary mb-n1">Graphite on roof</MudText>
+                <MudText Typo="Typo.subtitle1" Class="mud-test-secondary mb-n1">Graphite on roof</MudText>
                 <MudText Typo="Typo.h5">150,000</MudText>
             </div>
         </MudPaper>
@@ -24,7 +24,7 @@
         <MudPaper Elevation="25" Class="d-flex flex-row pt-6 pb-4" Style="height:100px;">
             <MudIcon Icon="@Icons.Material.Filled.Public" Color="Color.Success" Class="mx-4" Style="width:54px; height:54px;"></MudIcon>
             <div>
-                <MudText Typo="Typo.subtitle1" Class="mud-text-secondary mb-n1">Global Spread</MudText>
+                <MudText Typo="Typo.subtitle1" Class="mud-test-secondary mb-n1">Global Spread</MudText>
                 <MudText Typo="Typo.h5">12%</MudText>
             </div>
         </MudPaper>
@@ -33,7 +33,7 @@
         <MudPaper Elevation="25" Class="d-flex flex-row pt-6 pb-4" Style="height:100px;">
             <MudIcon Icon="@Icons.Custom.Uncategorized.Radioactive" Color="Color.Warning" Class="mx-4" Style="width:54px; height:54px;"></MudIcon>
             <div>
-                <MudText Typo="Typo.subtitle1" Class="mud-text-secondary mb-n1">Roentgen</MudText>
+                <MudText Typo="Typo.subtitle1" Class="mud-test-secondary mb-n1">Roentgen</MudText>
                 <MudText Typo="Typo.h5">3,6</MudText>
             </div>
         </MudPaper>
